--- a/src/AppBundle/Resources/config/doctrine/Faction.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Faction.orm.yml
@@ -1,4 +1,23 @@
 AppBundle\Entity\Faction:
     type: entity
     table: faction
-     
+    oneToMany:
+        cards:
+            targetEntity: Card
+            orderBy: {'position':'ASC'}
+            mappedBy: faction
+    fields:
+        id:
+            type: integer
+            id: true
+            generator:
+                strategy: AUTO
+        code:
+            type: string
+            length: 255
+            nullable: false
+        name:
+            type: string
+            length: 1024
+            nullable: false
+    
