card search by name and code; card display

--- a/src/AppBundle/Resources/config/doctrine/Card.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Card.orm.yml
@@ -68,7 +68,7 @@ AppBundle\Entity\Card:
         quantity:
             type: smallint
             nullable: false
-        gold:
+        income:
             type: smallint
             nullable: true
         claim:
