cycle.isBox ; better navbar

--- a/src/AppBundle/Resources/config/doctrine/Cycle.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Cycle.orm.yml
@@ -23,6 +23,10 @@ AppBundle\Entity\Cycle:
         position:
             type: smallint
             nullable: false
+        isBox:
+            type: boolean
+            nullable: false
+            column: is_box
         dateCreation:
             type: datetime
             nullable: false
