--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -11,7 +11,7 @@ parameters:
 
 framework:
     #esi:             ~
-    #translator:      { fallbacks: ["%locale%"] }
+    translator:      { fallbacks: ["en"] }
     secret:          "%secret%"
     router:
         resource: "%kernel.root_dir%/config/routing.yml"
@@ -38,6 +38,9 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         cards_data: "@cards_data"
+    form:
+        resources:
+            - 'bootstrap_3_layout.html.twig'
 
 # Assetic Configuration
 assetic:
@@ -87,7 +90,10 @@ fos_user:
     db_driver: orm # other valid values are 'mongodb', 'couchdb' and 'propel'
     firewall_name: main
     user_class: AppBundle\Entity\User
+    registration:
+        confirmation:
+            enabled: false
 
 # FOSJsRoutingBundle Configuration
 fos_js_routing:
-    routes_to_expose: [ 'api_sets', 'api_cards' ]
+    routes_to_expose: [ '.*' ]
