--- a/src/AppBundle/Resources/config/doctrine/Faction.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Faction.orm.yml
@@ -20,4 +20,6 @@ AppBundle\Entity\Faction:
             type: string
             length: 1024
             nullable: false
-    
+        is_primary:
+            type: boolean
+            nullable: false
