--- a/src/AppBundle/Resources/config/doctrine/Faction.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Faction.orm.yml
@@ -23,3 +23,6 @@ AppBundle\Entity\Faction:
         is_primary:
             type: boolean
             nullable: false
+        octgnid:
+            type: string
+            nullable: true
