renamed to thronesdb.com

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "cedric/agot2db",
+    "name": "cedric/thronesdb",
     "description": "A Game of Thrones LCG deckbuilder",
     "license": "proprietary",
     "type": "project",
