--- a/src/AppBundle/Resources/config/routing.yml
+++ b/src/AppBundle/Resources/config/routing.yml
@@ -1,36 +1,36 @@
-adb_admin:
+app_admin:
     resource: "@AppBundle/Resources/config/routing/admin.yml"
     prefix: /admin
 
-adb_api_oauth2:
+app_api_oauth2:
     resource: "@AppBundle/Resources/config/routing/api_oauth2.yml"
     prefix: /api_oauth2
 
-adb_api:
+app_api:
     resource: "@AppBundle/Resources/config/routing/api.yml"
     prefix: /api
 
-adb_cards:
+app_cards:
     resource: "@AppBundle/Resources/config/routing/cards.yml"
-#    prefix: 
+#    prefix:
 
-adb_deck:
+app_deck:
     resource: "@AppBundle/Resources/config/routing/deck.yml"
     prefix: /deck
 
-adb_decklist:
+app_decklist:
     resource: "@AppBundle/Resources/config/routing/decklist.yml"
     prefix: /decklist
 
-adb_review:
+app_review:
     resource: "@AppBundle/Resources/config/routing/review.yml"
     prefix: /review
 
-adb_tag:
+app_tag:
     resource: "@AppBundle/Resources/config/routing/tag.yml"
     prefix: /tag
 
-adb_user:
+app_user:
     resource: "@AppBundle/Resources/config/routing/user.yml"
     prefix: /user
 
@@ -63,6 +63,7 @@ decklists_list:
     methods: [GET]
     defaults:
         _controller: AppBundle:Social:list
+        type: popular
         page: 1
     requirements:
         page: \d+
