plots in deck editor

--- a/src/AppBundle/Resources/config/doctrine/Reviewcomment.orm.yml
+++ b/src/AppBundle/Resources/config/doctrine/Reviewcomment.orm.yml
@@ -2,7 +2,7 @@ AppBundle\Entity\Reviewcomment:
     type: entity
     table: reviewcomment
     manyToOne:
-        author:
+        user:
             targetEntity: User
             nullable: false
             joinColumn:
