use the remember me functionality; fix #10

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -24,7 +24,12 @@ security:
                 default_target_path: index
             logout:       true
             anonymous:    true
-
+            remember_me:
+                key:      "%secret%"
+                lifetime: 31536000 # 365 jours en secondes
+                path:     /
+                domain:   ~ # Prend la valeur par défaut du domaine courant depuis $_SERVER
+            
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
